--- a/app/assets/stylesheets/src/home.css.sass
+++ b/app/assets/stylesheets/src/home.css.sass
@@ -14,7 +14,7 @@ a
 
 
 .container
-  width: 900px
+  width: 900px  
   padding-left: 5px
   padding-right: 5px
   border-left: 2px solid white
@@ -42,6 +42,9 @@ a
     margin-top: 100px
     margin-right: 50px
     .title
+      a
+        &:hover
+          color: $grey
       font-size: 70px
     .menu-items
       padding-top: 5px
