--- a/app/views/layouts/_header.haml
+++ b/app/views/layouts/_header.haml
@@ -1,8 +1,8 @@
 .pull-left.logo= image_tag('icons/header-astroboy.png')
 
 .menu
-  .title SKARADAMS
+  .title= link_to 'SKARADAMS', root_path
   .menu-items
-    .item blog
-    .item qui suis-je ?
-    .item contact
+    .item= link_to 'blog', root_path
+    .item= link_to 'qui suis-je ?', root_path
+    .item= link_to 'contact', root_path
