--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -3,10 +3,4 @@
     .category.pull-left= image_tag("icons/#{ category.identifier }-icon.png")
 .clearfix
 
-- @articles.each do |article|
-  .article-thumb
-    = link_to article do
-      .icon= image_tag("icons/#{ article.category.identifier }-small-icon.png")
-      .title= article.title
-      .body= image_tag article.picture(:thumb)
-  %br
+= render partial: "articles/list", locals: { articles: @articles }
