--- a/app/views/layouts/_header.haml
+++ b/app/views/layouts/_header.haml
@@ -3,6 +3,6 @@
 .menu
   .title= link_to 'SKARADAMS', root_path
   .menu-items
-    .item= link_to 'blog', root_path
+    .item= link_to 'blog', articles_path
     .item= link_to 'qui suis-je ?', root_path
     .item= link_to 'contact', root_path
