--- a/app/views/articles/_list.html.haml
+++ b/app/views/articles/_list.html.haml
@@ -1,6 +1,7 @@
 - @articles.each do |article|
   .article-thumb
-    = link_to article do
-      .icon= image_tag("icons/#{ article.category.identifier }-small-icon.png")
-      .title= article.title
-      .body= image_tag article.picture(:thumb)
+    - cache article do
+      = link_to article do
+        .icon= image_tag("icons/#{ article.category.identifier }-small-icon.png")
+        .title= article.title
+        .body= image_tag article.picture(:thumb)
