--- a/app/assets/stylesheets/src/home.css.sass
+++ b/app/assets/stylesheets/src/home.css.sass
@@ -1,7 +1,11 @@
 $grey: #191919
 $red: #FE4365
 
+html
+  height: 100%
+
 body
+  height: 100%
   background-image: image-url("body-background.png")
   background-repeat: repeat
   line-height: normal
@@ -14,6 +18,7 @@ a
 
 
 .container
+  height: 100%
   width: 900px  
   padding-left: 5px
   padding-right: 5px
@@ -21,6 +26,7 @@ a
   border-right: 2px solid white
 
 .wrapper
+  min-height: 100%
   background-color: white
 
 .header
@@ -60,6 +66,7 @@ a
 
 
 .content
+  min-height: 100%
   padding-top: 10px
   padding-left: 20px
   padding-right: 20px
