--- a/app/assets/stylesheets/src/home.css.sass
+++ b/app/assets/stylesheets/src/home.css.sass
@@ -16,9 +16,11 @@ a
     color: $red
     text-decoration: none
 
+h1
+  font-size: 60px
 
 .container
-  height: 100%
+  min-height: 100%
   width: 900px  
   padding-left: 5px
   padding-right: 5px
@@ -73,11 +75,34 @@ a
   font-family: 'OpenBaskerville'
 
 
-.category
+.category-filter
   margin-bottom: 20px
   margin-right: 10px
   img
     height: 70px
+
+
+
+// ARTICLES
+
+.article-show
+  .title
+    .date
+      margin-top: -5px
+      font-size: 18px
+  img
+    border-left: 6px solid $grey
+    border-right: 6px solid $grey
+    border-top: 1px solid $grey
+    border-bottom: 1px solid $grey
+  .body
+    min-height: 100%
+    p
+      text-indent: 30px
+    font-family: 'Verdana'
+    font-size: 18px
+    letter-spacing: 1px
+    margin-top: 20px
 
 .article-thumb
   position: relative
@@ -105,9 +130,9 @@ a
     -webkit-box-shadow: 3px 3px 0px 0px $grey
     -o-box-shadow: 3px 3px 0px 0px $grey
     box-shadow: 3px 3px 0px 0px $grey
-    
   .body
     img
       border: 5px solid $grey
       border-top-right-radius: 20px
       border-bottom-left-radius: 20px
+
