--- a/app/views/articles/show.html.haml
+++ b/app/views/articles/show.html.haml
@@ -5,3 +5,9 @@
     .clearfix
   .picture= image_tag @article.picture(:thumb)
   .body= @article.body.html_safe
+
+= form_for @comment do |f|
+  = f.title
+  = f.author
+  = f.body
+.comments
