--- a/app/assets/stylesheets/src/home.css.sass
+++ b/app/assets/stylesheets/src/home.css.sass
@@ -111,6 +111,9 @@ h1
 
 .article-show
   min-height: 100%
+  margin-bottom: 20px
+  padding-bottom: 20px
+  border-bottom: 2px dotted $grey
   .title
     .date
       margin-top: -5px
