--- a/app/views/shared/_disqus.html.haml
+++ b/app/views/shared/_disqus.html.haml
@@ -1,7 +1,7 @@
 #disqus_thread
   :javascript
     // put the short name you signed up with here
-    var disqus_shortname = 'example'; 
+    var disqus_shortname = 'skaradams'; 
     var disqus_developer = #{ Rails.env == "production" ? '0' : '1' };
     var disqus_title = "#{ title }";
     var disqus_url = "#{ request.url }";
