--- a/app/views/admin/articles/_form.html.haml
+++ b/app/views/admin/articles/_form.html.haml
@@ -2,7 +2,7 @@
   = f.association :category, label_method: :identifier
   = f.input :title
   = f.input :picture
-  = f.input :body
   = f.input :published
-  = f.input :user_id, as: :hidden, input_html: { value: current_user.id }
   = f.submit
+
+= link_to "Sections", admin_article_sections_path(@article)
