--- a/app/assets/stylesheets/src/home.css.sass
+++ b/app/assets/stylesheets/src/home.css.sass
@@ -109,6 +109,15 @@ h1
 
 // ARTICLES
 
+.tooltip
+  font-size: 15px
+.tooltip-inner
+  
+  padding-top: 0
+  padding-bottom: 4px
+  padding-left: 10px
+  padding-right: 10px
+
 .article-show
   min-height: 100%
   margin-bottom: 20px
