--- a/app/assets/stylesheets/src/home.css.sass
+++ b/app/assets/stylesheets/src/home.css.sass
@@ -20,6 +20,19 @@ a
 h1
   font-size: 60px
 
+.server-message
+  margin-top: 4px
+  margin-bottom: 4px
+  font-size: 18px
+  padding: 5px
+  padding-left: 10px
+  border-radius: 4px
+
+.notice
+  background-color: #C8FFA3
+.error
+  background-color: #FFA3A3
+
 .container
   min-height: 100%
   width: 900px  
@@ -184,4 +197,20 @@ h1
       border: 5px solid $grey
       border-top-right-radius: 20px
       border-bottom-left-radius: 20px
+
+// Contact Form
+
+.contact-form
+  %h2
+    text-align: center
+  label
+    font-size: 20px
+  input
+    width: 100%
+  textarea
+    width: 100%
+    height: 200px
+  width: 400px
+  margin: auto
+  margin-bottom: 50px
 
