--- a/app/views/home/contact.html.haml
+++ b/app/views/home/contact.html.haml
@@ -1,5 +1,5 @@
 .contact-form
-  %h2 Envoyez-moi un message
+  %h2 Envoie-moi un message
   = simple_form_for @message, url: send_contact_path do |f|
     = f.input :name
     = f.input :email
