added title to sections

--- a/app/views/admin/sections/_form.html.haml
+++ b/app/views/admin/sections/_form.html.haml
@@ -1,4 +1,5 @@
 = simple_form_for ['admin', @article, @section], method: method do |f|
+  = f.input :title
   = f.input :picture
   = f.input :legend
   = f.input :body
