--- a/app/assets/stylesheets/src/home.css.sass
+++ b/app/assets/stylesheets/src/home.css.sass
@@ -2,6 +2,20 @@ $grey: #191919
 $red: #FE4365
 $green: #83AF9B
 
+@font-face
+  font-family: 'ChunkyFive'
+  src:font-url('chunk.ttf')
+  font-weight: normal
+  font-style: normal
+
+
+@font-face 
+  font-family: 'QuickSand'
+  src:font-url('quicksand.otf')
+  font-weight: normal
+  font-style: normal
+
+
 html
   height: 100%
 
@@ -20,7 +34,7 @@ a
 h1
   font-size: 40px
 h3
-  font-family: 'OpenBaskerville'
+  font-family: 'QuickSand'
 
 .server-message
   margin-top: 4px
@@ -88,7 +102,7 @@ h3
   padding-top: 10px
   padding-left: 20px
   padding-right: 20px
-  font-family: 'OpenBaskerville'
+  font-family: 'QuickSand'
 
 
 .category-filter
