--- a/app/assets/stylesheets/src/home.css.sass
+++ b/app/assets/stylesheets/src/home.css.sass
@@ -3,18 +3,17 @@ $red: #FE4365
 $green: #83AF9B
 
 @font-face
-  font-family: 'ChunkyFive'
-  src:font-url('chunk.ttf')
+  font-family: 'chunkyfive'
+  src:font-url('chunkyfive.ttf')
   font-weight: normal
   font-style: normal
 
 
 @font-face 
-  font-family: 'QuickSand'
+  font-family: 'quicksand'
   src:font-url('quicksand.otf')
   font-weight: normal
   font-style: normal
-
 
 html
   height: 100%
@@ -34,7 +33,7 @@ a
 h1
   font-size: 40px
 h3
-  font-family: 'QuickSand'
+  font-family: 'quicksand'
 
 .server-message
   margin-top: 4px
@@ -64,7 +63,7 @@ h3
 .header
   color: $grey
   position: relative
-  font-family: 'ChunkyFive'   
+  font-family: 'chunkyfive'   
   background-image: image-url("header-background.png")
   background-repeat: repeat
   height: 231px
@@ -102,7 +101,7 @@ h3
   padding-top: 10px
   padding-left: 20px
   padding-right: 20px
-  font-family: 'QuickSand'
+  font-family: 'quicksand'
 
 
 .category-filter
@@ -166,6 +165,7 @@ h3
     margin-bottom: 30px
     p
       text-indent: 30px
+      text-justify: newspaper
     .legend
       font-size: 15px
       font-style: italic
@@ -177,7 +177,6 @@ h3
       padding-bottom: 4px
       text-align: center
 
-  font-family: 'Verdana'
   font-size: 18px
   letter-spacing: 1px
   margin-top: 20px
