--- a/app/assets/stylesheets/src/home.css.sass
+++ b/app/assets/stylesheets/src/home.css.sass
@@ -3,14 +3,14 @@ $red: #FE4365
 $green: #83AF9B
 
 @font-face
-  font-family: 'chunkyfive'
-  src:font-url('chunkyfive.ttf')
+  font-family: 'ChunkyFive'
+  src:font-url('chunk.ttf')
   font-weight: normal
   font-style: normal
 
 
 @font-face 
-  font-family: 'quicksand'
+  font-family: 'QuickSand'
   src:font-url('quicksand.otf')
   font-weight: normal
   font-style: normal
@@ -33,7 +33,7 @@ a
 h1
   font-size: 40px
 h3
-  font-family: 'quicksand'
+  font-family: 'QuickSand'
 
 .server-message
   margin-top: 4px
@@ -63,7 +63,7 @@ h3
 .header
   color: $grey
   position: relative
-  font-family: 'chunkyfive'   
+  font-family: 'ChunkyFive'   
   background-image: image-url("header-background.png")
   background-repeat: repeat
   height: 231px
@@ -101,7 +101,7 @@ h3
   padding-top: 10px
   padding-left: 20px
   padding-right: 20px
-  font-family: 'quicksand'
+  font-family: 'QuickSand'
 
 
 .category-filter
@@ -116,7 +116,7 @@ h3
   .foot-wrapper
     width: 220px
     margin: auto
-  font-family: 'ChunkFive'
+  font-family: 'ChunkyFive'
   .info
     margin-right: 2px
   a
@@ -165,7 +165,7 @@ h3
     margin-bottom: 30px
     p
       text-indent: 30px
-      text-justify: newspaper
+      text-align: justify
     .legend
       font-size: 15px
       font-style: italic
