--- a/app/assets/stylesheets/src/home.css.sass
+++ b/app/assets/stylesheets/src/home.css.sass
@@ -20,7 +20,7 @@ html
 
 body
   min-height: 100%
-  background-image: image-url("body-background.png")
+  background-image: image-url("body-background.jpg")
   background-repeat: repeat
   line-height: normal
 
@@ -64,7 +64,7 @@ h3
   color: $grey
   position: relative
   font-family: 'ChunkyFive'   
-  background-image: image-url("header-background.png")
+  background-image: image-url("header-background.jpg")
   background-repeat: repeat
   height: 231px
   border-bottom: 10px solid $grey
