default background if no image

--- a/app/assets/stylesheets/src/home.css.sass
+++ b/app/assets/stylesheets/src/home.css.sass
@@ -21,6 +21,7 @@ html
 body
   min-height: 100%
   background-image: image-url("body-background.jpg")
+  background-color: black
   background-repeat: repeat
   line-height: normal
 
@@ -65,6 +66,7 @@ h3
   position: relative
   font-family: 'ChunkyFive'   
   background-image: image-url("header-background.jpg")
+  background-color: #FCF7D7
   background-repeat: repeat
   height: 231px
   border-bottom: 10px solid $grey
