hardcoded assets, what up

--- a/app/assets/stylesheets/src/home.css.sass
+++ b/app/assets/stylesheets/src/home.css.sass
@@ -4,7 +4,7 @@ $green: #83AF9B
 
 @font-face
   font-family: 'ChunkyFive'
-  src:font-url('chunk.ttf')
+  src:url('https://s3-eu-west-1.amazonaws.com/skaradamsfr-assets/assets/chunk-1b8bb918cd9f928d88070fd382f8bde9.ttf')
   font-weight: normal
   font-style: normal
 
@@ -20,7 +20,7 @@ html
 
 body
   min-height: 100%
-  background-image: image-url("body-background.jpg")
+  background-image: url("https://s3-eu-west-1.amazonaws.com/skaradamsfr-assets/assets/body-background-4998cc4b3de210e12b2155f89db7366d.jpg")
   background-color: black
   background-repeat: repeat
   line-height: normal
@@ -65,8 +65,7 @@ h3
   color: $grey
   position: relative
   font-family: 'ChunkyFive'   
-  background-image: image-url("header-background.jpg")
-  background-color: #FCF7D7
+  background-image: url("https://s3-eu-west-1.amazonaws.com/skaradamsfr-assets/assets/header-background-396c519a9b6d80c1435a30ce4cc42bfc.jpg")
   background-repeat: repeat
   height: 231px
   border-bottom: 10px solid $grey
