--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -28,4 +28,6 @@
             .clearfix
             .links
               .pull-left.link= link_to image_tag('icons/twitter-icon.png'), 'http://www.twitter.com/skaradams'
-              .pull-left.link= link_to image_tag('icons/github-icon.png'), 'http://www.github.com/skaradams'            
+              .pull-left.link= link_to image_tag('icons/github-icon.png'), 'http://www.github.com/skaradams'
+
+        = render partial: 'layouts/analytics'            
