--- a/app/assets/stylesheets/src/home.css.sass
+++ b/app/assets/stylesheets/src/home.css.sass
@@ -4,14 +4,14 @@ $green: #83AF9B
 
 @font-face
   font-family: 'ChunkyFive'
-  src:url('https://s3-eu-west-1.amazonaws.com/skaradamsfr-assets/assets/chunk-1b8bb918cd9f928d88070fd382f8bde9.ttf')
+  src:url('https://s3-eu-west-1.amazonaws.com/skaradamsfr-assets/assets/chunk.ttf')
   font-weight: normal
   font-style: normal
 
 
 @font-face 
   font-family: 'QuickSand'
-  src:font-url('quicksand.otf')
+  src:font-url('https://s3-eu-west-1.amazonaws.com/skaradamsfr-assets/assets/quicksand.otf')
   font-weight: normal
   font-style: normal
 
