--- a/app/views/layouts/_analytics.html.haml
+++ b/app/views/layouts/_analytics.html.haml
@@ -4,5 +4,5 @@
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-33339361-1', 'www.skaradams.fr');
+  ga('create', 'UA-33339361-1', 'skaradams.fr');
   ga('send', 'pageview');
