--- a/app/assets/stylesheets/src/home.css.sass
+++ b/app/assets/stylesheets/src/home.css.sass
@@ -232,3 +232,34 @@ h3
   margin: auto
   margin-bottom: 50px
 
+.blogroll
+  position: absolute
+  bottom: 0
+  right: 10px
+  height: 28px
+  width: 150px
+  text-align: right
+  background: white
+  padding-top: 5px
+  padding-right: 15px
+  font-size: 18px
+  font-family: 'QuickSand'
+  border-top-left-radius: 20px
+  
+  .caret
+    margin-top: 7px
+    margin-left: 2px
+
+.dropup
+  a
+    &:active
+      text-decoration: none
+    &:focus
+      text-decoration: none
+      color: $red
+  .dropdown-menu  
+    margin-right: -1px
+    color: $grey
+    a
+      &:hover
+        background: $red
