--- a/app/views/admin/home/_menu.html.haml
+++ b/app/views/admin/home/_menu.html.haml
@@ -1,1 +1,3 @@
-= link_to "Articles", admin_articles_path
+.pull-left= link_to "Articles", admin_articles_path
+.pull-left= link_to "Blogs", admin_blogs_path
+.clearfix
