blogroll css fix

--- a/app/assets/stylesheets/src/home.css.sass
+++ b/app/assets/stylesheets/src/home.css.sass
@@ -235,7 +235,7 @@ h3
 .blogroll
   position: absolute
   bottom: 0
-  right: 10px
+  right: 0
   height: 28px
   width: 150px
   text-align: right
@@ -258,7 +258,6 @@ h3
       text-decoration: none
       color: $red
   .dropdown-menu  
-    margin-right: -1px
     color: $grey
     a
       &:hover
