--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -31,7 +31,7 @@
               .pull-left.link= link_to image_tag('icons/facebook-icon.gif'), 'http://www.facebook.com/skaradams', target: '_blank'
               .pull-left.link= link_to image_tag('icons/github-icon.png'), 'http://www.github.com/skaradams', target: '_blank'
 
-        = render partial: 'layouts/analytics'     
+        / = render partial: 'layouts/analytics'     
     .blogroll.dropup.pull-right
       %a#dLabel.dropdown-toggle{"data-target" => "#", "data-toggle" => "dropdown", href: request.original_url, role: "button"}
         Blogs à suivre
